--- a/apigateway-service/src/main/resources/application.yml
+++ b/apigateway-service/src/main/resources/application.yml
@@ -15,12 +15,24 @@ spring:
     gateway:
       mvc:
         routes:
-          - id: first-service
-            uri : http://localhost:8081/
+          - id: user-service
+            uri : lb://USER-SERVICE
             predicates:
-              - Path=/first-service/**
-          - id: second-service
-            uri: http://localhost:8082/
+              - Path=/user-service/**
+          - id: item-service
+            uri: lb://ITEM-SERVICE
             predicates:
-              - Path=/second-service/**
+              - Path=/item-service/**
+          - id: order-service
+            uri: lb://ORDER-SERVICE
+            predicates:
+              - Path=/order-service/**
+          - id: review-service
+            uri: lb://REVIEW-SERVICE
+            predicates:
+              - Path=/review-service/**
+          - id: image-service
+            uri: lb://IMAGE-SERVICE
+            predicates:
+              - Path=/image-service/**
 
