--- a/apigateway-service/src/main/resources/application.yml
+++ b/apigateway-service/src/main/resources/application.yml
@@ -13,30 +13,39 @@ spring:
     name: apigateway-service
   cloud:
     gateway:
-      mvc:
-        routes:
-          - id: user-service
-            uri : lb://USER-SERVICE
-            predicates:
-              - Path=/user-service/**
-          - id: item-service
-            uri: lb://ITEM-SERVICE
-            predicates:
-              - Path=/item-service/**
-          - id: order-service
-            uri: lb://ORDER-SERVICE
-            predicates:
-              - Path=/order-service/**
-          - id: review-service
-            uri: lb://REVIEW-SERVICE
-            predicates:
-              - Path=/review-service/**
-          - id: image-service
-            uri: lb://IMAGE-SERVICE
-            predicates:
-              - Path=/image-service/**
+      default-filters:
+        - name: GlobalFilter
+      routes:
+        - id: user-service
+          uri: lb://USER-SERVICE
+          predicates:
+            - Path=/user-service/info
+            - Method=GET
+          filters:
+            - name: AuthFilter
+        - id: user-service
+          uri : lb://USER-SERVICE
+          predicates:
+            - Path=/user-service/**
+        - id: item-service
+          uri: lb://ITEM-SERVICE
+          predicates:
+            - Path=/item-service/**
+        - id: order-service
+          uri: lb://ORDER-SERVICE
+          predicates:
+            - Path=/order-service/**
+        - id: review-service
+          uri: lb://REVIEW-SERVICE
+          predicates:
+            - Path=/review-service/**
+        - id: image-service
+          uri: lb://IMAGE-SERVICE
+          predicates:
+            - Path=/image-service/**
+
 
 
 
 token:
-  key: secret
+  key: "c7L0+z1bI67OpGIeYN9NcKgXBsHKiR2RlYX1Vzj4ULA="
