--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,8 @@
     "bootstrap": "^5.3.3",
     "element-plus": "^2.7.6",
     "pinia": "^2.1.7",
+    "reflect-metadata": "^0.2.2",
+    "tsyringe": "^4.8.0",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
