--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "class-transformer": "^0.5.1",
     "element-plus": "^2.7.6",
     "pinia": "^2.1.7",
     "reflect-metadata": "^0.2.2",
