--- a/front/tsconfig.app.json
+++ b/front/tsconfig.app.json
@@ -5,6 +5,9 @@
   "compilerOptions": {
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "noImplicitAny": false,
 
     "baseUrl": ".",
     "paths": {
