--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -4,7 +4,9 @@
   "compilerOptions": {
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "noImplicitAny": false
   },
+
   "references": [
     {
       "path": "./tsconfig.node.json"
