--- a/front/tsconfig.node.json
+++ b/front/tsconfig.node.json
@@ -11,6 +11,9 @@
     "composite": true,
     "noEmit": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "noImplicitAny": false,
 
     "module": "ESNext",
     "moduleResolution": "Bundler",
