--- a/image-service/src/main/resources/application.yml
+++ b/image-service/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
       ddl-auto: create-drop
     properties:
       hibernate:
-        #         show_sql: true
+        show_sql: true
         format_sql: true
 
 eureka:
