--- a/item-service/src/main/resources/application.yml
+++ b/item-service/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
       path: /h2-console
 
   datasource:
-    url: jdbc:h2:mem:tmp
+    url: jdbc:h2:mem:tmp;DB_CLOSE_ON_EXIT=FALSE
     username: sa
     password:
     driver-class-name: org.h2.Driver
