--- a/apigateway-service/src/main/resources/application.yml
+++ b/apigateway-service/src/main/resources/application.yml
@@ -42,6 +42,13 @@ spring:
         - id: item-service
           uri: lb://ITEM-SERVICE
           predicates:
+            - Path=/item-service/update/**
+            - Method=PATCH
+          filters:
+            - AuthFilter
+        - id: item-service
+          uri: lb://ITEM-SERVICE
+          predicates:
             - Path=/item-service/**
         - id: order-service
           uri: lb://ORDER-SERVICE
@@ -63,6 +70,12 @@ spring:
           uri: lb://IMAGE-SERVICE
           predicates:
             - Path=/image-service/upload
+          filters:
+            - name: AuthFilter
+        - id: image-service
+          uri: lb://IMAGE-SERVICE
+          predicates:
+            - Path=/image-service/update/**
           filters:
             - name: AuthFilter
         - id: image-service
