헤더 수정 및 삭제 기능 구현중

--- a/apigateway-service/src/main/resources/application.yml
+++ b/apigateway-service/src/main/resources/application.yml
@@ -59,7 +59,7 @@ spring:
         - id: review-service
           uri: lb://REVIEW-SERVICE
           predicates:
-            - Path=/review-service/write/**, /review-service/revise/**
+            - Path=/review-service/write/**, /review-service/update/**
           filters:
             - name: AuthFilter
         - id: review-service
