--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -4,6 +4,17 @@ server:
 spring:
   application:
     name: user-service
+  config:
+    import: configserver:http://127.0.0.1:8888 # 구성정보 설정
+  cloud:
+    config:
+      name: ecommerce # yml 파일명 앞부분
+
+  rabbitmq:
+    host: 54.180.140.136
+    port: 5672
+    username: guest
+    password: guest
   h2:
     console:
       enabled: true
@@ -32,5 +43,13 @@ eureka:
     service-url:
       defaultZone: http://127.0.0.1:8761/eureka
 
-token:
-  key: "c7L0+z1bI67OpGIeYN9NcKgXBsHKiR2RlYX1Vzj4ULA="
+
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, busrefresh
+
+#token:
+#  key: "c7L0+z1bI67OpGIeYN9NcKgXBsHKiR2RlYX1Vzj4ULA="
